array.island.Island.scala.error
Erreur de compilation :
Island:4: error: not found: value len
  for (compteur <- 1 to len(island)) {
                        ^Island:4: error: missing argument list for method island in class Island
Unapplied methods are only converted to functions when a function type is expected.
You can make this conversion explicit by writing `island _` or `island(_)` instead of `island`.
  for (compteur <- 1 to len(island)) {
                            ^